Updated weekly reading list

--- a/content/post/2023-09-07-Presentation-Articles/Presentation_Articles.Rmd
+++ b/content/post/2023-09-07-Presentation-Articles/Presentation_Articles.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Presentation Articles'
+title: 'Seminar Presentation Articles'
 author: "JLB"
 date: "2023-09-07"
 output: html_document
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Please find a list of weekly seminar presentation articles below: 
+Pairs of students will lead a summary a summary / seminar-style discussion about the assigned weekly article. 
 
 - #### Week 2 (September 15th): Quantification of Behaviour
     + Article Link: [*Automated behavioural analysis reveals the basic behavioural repertoire of the urochordate Ciona intestinalis*](https://www.nature.com/articles/s41598-019-38791-5)
@@ -22,8 +22,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 - #### Week 4 (September 29th): Molecular Endpoints
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Novel benzodiazepine remimazolam tosylate delays neurodegeneration of aged mice via decreasing tau phosphorylation*](https://www.sciencedirect.com/science/article/pii/S0161813X22001267?via%3Dihub)
+    + [pdf download](/files/Week_4_Chen2022)
 
 
 - #### Week 5 (October 6th): SEQ
@@ -40,28 +40,28 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 - #### Week 8 (November 3rd): Alterations in gene expression
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Young CSF restores oligodendrogenesis and memory in aged mice via Fgf17*](https://www.nature.com/articles/s41586-022-04722-0)
+    + [pdf download](/files/Week_8_Iram2022)
 
 
 - #### Week 9 (November 10th): DREADDs
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Lateral habenula-projecting central amygdala circuits expressing GABA and NPY Y1 receptor modulate binge-like ethanol intake in mice*](https://pubmed.ncbi.nlm.nih.gov/36059430/)
+    + [pdf download](/files/Week_9_Companion2022)
 
 
 - #### Week 10 (November 17th): Optogenetics
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Cerebellar nuclei neurons projecting to the lateral parabrachial nucleus modulate classical fear conditioning*](https://pubmed.ncbi.nlm.nih.gov/36952344/)
+    + [pdf download](/files/Week_10_Hwang2023)
 
 
 - #### Week 11 (November 24th): in-vivo calcium imaging
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Hemispherically lateralized rhythmic oscillations in the cingulate-amygdala circuit drive affective empathy in mice*](https://www.cell.com/neuron/fulltext/S0896-6273(22)01000-5?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0896627322010005%3Fshowall%3Dtrue)
+    + [pdf download](/files/Week_11_Kim2023)
 
 
 - #### Week 12 (December 1st): TRAP
-    + Article Link: []()
-    + [pdf download](/files/)
+    + Article Link: [*Brain-wide mapping reveals that engrams for a single memory are distributed across multiple brain regions*](https://www.nature.com/articles/s41467-022-29384-4)
+    + [pdf download](/files/Week_12_Roy2022)
 
 
 
