--- a/content/post/2023-09-08-Week-1-Introductions/Week_1.Rmd
+++ b/content/post/2023-09-08-Week-1-Introductions/Week_1.Rmd
@@ -13,6 +13,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
-knitr::include_url("https://black-cat-enthusiast.github.io/PSY490_Lecture_Slides/#7")
+knitr::include_url("https://black-cat-enthusiast.github.io/PSY490_Lecture_Slides")
 ```
 
