--- a/content/post/2023-09-08-Week-1-Introductions/Week_1.Rmd
+++ b/content/post/2023-09-08-Week-1-Introductions/Week_1.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE,warning = FALSE, message = FALSE)
 ```
 
 # Welcome to PSY 490: Advanced current topics in neuroscience seminar.
