--- a/content/post/2023-09-07-Presentation-Articles/Presentation_Articles.Rmd
+++ b/content/post/2023-09-07-Presentation-Articles/Presentation_Articles.Rmd
@@ -6,10 +6,21 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE,warning=FALSE,message=FALSE)
 ```
 
 Pairs of students will lead a summary a summary / seminar-style discussion about the assigned weekly article. 
+
+## Presentation Schedule: 
+
+```{r}
+library(tidyverse)
+library(kableExtra)
+a <- read_csv("PSY_490_Presenetation_Weeks.csv")
+knitr::kable(a) %>%
+  kable_styling(latex_options = "striped")
+```
+
 
 - #### Week 2 (September 15th): Quantification of Behaviour
     + Article Link: [*Automated behavioural analysis reveals the basic behavioural repertoire of the urochordate Ciona intestinalis*](https://www.nature.com/articles/s41598-019-38791-5)
